# plant-image-finder

./: .gitignore  Pipfile  README.md  __init__.py  create_venv.sh  jelitto_image_finder.ipynb  pyproject.toml  requirements.txt
requirements/: main.in  main.txt
src/: image_finder.py  jelitto_image_finder.ipynb  jelitto_pricelist.xls  output_data.csv
