[tool.poetry]
name = "jelitto-image-finder"
version = "0.1.0"
description = ""
authors = ["ann-cooper <cooperannc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "notebook"
pandas = "^1.0.4"
numpy = "^1.18.5"
requests = "^2.23.0"
lxml = "^4.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
